自己动手，丰衣足食，新版博客

--- a/css/uncompile/_variable.scss
+++ b/css/uncompile/_variable.scss
@@ -1,5 +1,4 @@
-$global_FontSet:12px/1.75 "Mircosoft YaHei",微软雅黑,"STHeiti Light",Tahoma,Arial,sans-serif;
-$global_FontMainColor:#333;
-$global_FontSubColor:#999;
-$global_grayborder:#ccc;
-$mainColor:#edae21;
+$nav-1-color: #A02D24;
+$nav-2-color: #EE9D05;
+$nav-3-color: #3BA1C9;
+$header_bg:#f3f3f3;
