--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,15 @@
     <meta name="author" content="zex" />
     <meta name="description" content="zex's Blog" />
     <meta name="viewport" content="width=screen-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/css/default.css" type="text/css" />
+    <meta name="format-detection" content="telephone=no" />
+    <!--[if lt IE 9]>
+        <script src="../js/css3-mediaqueries.js"></script>
+        <script src="../js/html5.js"></script>
+    <![endif]-->
+    <link type="text/css" media="screen and (max-width:767px)" rel="stylesheet" href="../css/compile/mobile.css" />
+    <link type="text/css" media="screen and (min-width:768px)" rel="stylesheet" href="../css/compile/pc.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
-    <script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../js/jquery-1.7.1.min.js" type="text/javascript"></script>
 </head>
 <body>
     <!--[if IE]>
@@ -17,20 +22,49 @@
         zEx的博客不支持 IE 浏览器哦，请使用「Chrome」或者「Firefox」浏览器。
     </div>
     <![endif]-->
-    <div class="home-menu">
-        <div class="home-icon-con">
-            <a class="home-menu-icon" href="/">zex</a>
-            <a class="home-follow" href="#" title="Contact Me">+</a>
-        </div>
-        <div class="home-contact">
-            <a href="http://weibo.com/beiyuu/" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
-            <a href="http://www.douban.com/people/beiyuu/" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
-            <a href="http://instagram.com/beiyuu/" target="_blank" style="text-align:right"><img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/00c6602/images/ico/favicon.ico" alt="" width="22"/></a>
-        </div>
+
+
+    <div class="wrapper">
+        <header>
+            <div class="inner">
+                <div class="logo">
+                    <div class="welcome">welcome to zEx'blog</div>
+                    <div class="photo">
+                        <img src="/images/zex.jpeg" alt="zex'photo" />
+                    </div>
+                </div>
+                <nav>
+                    <a href="/blog" class="frist-child">原创</a>
+                    <a href="/translate">翻译</a>
+                    <a href="/summary" class="last-child">简介</a>
+                </nav>
+            </div>
+        </header>
+
+
+        {{ content }}
+
     </div>
-
-    {{ content }}
-
     
+
+
+    <script type="text/javascript">
+        $(function(){
+            if($(".js_cate").attr("name") || $(".page-content").attr("name")){
+                if($(".js_cate").attr("name") == "blog" || $(".page-content").attr("name") == "blog"){
+                    $("nav a").eq(0).addClass("on");
+                }
+                if($(".js_cate").attr("name") == "translate" || $(".page-content").attr("name") == "translate"){
+                    $("nav a").eq(1).addClass("on");
+                }
+                if($(".js_cate").attr("name") == "summary"|| $(".page-content").attr("name") == "summary"){
+                    $("nav a").eq(2).addClass("on");
+                }
+            }
+        })()
+    </script>
+
+
+
 </body>
 </html>
