--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,25 +2,12 @@
 layout: default
 ---
 
-<link rel="stylesheet" href="/js/prettify/prettify.css" />
-<style type="text/css">
-    body { background:#e8e8e8; }
-    @media screen and (max-width: 750px){
-        body { background:#fff; }
-    }
-    @media screen and (max-width: 1020px){
-        body { background:#fff; }
-    }
-</style>
+<div class="page-content" name="{{ page.categories }}">
+	<div class="hd">
+	    <h2>{{ page.title }}</h2>
 
-<div id="content">
-    <div class="entry">
-        <h1 class="entry-title"><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
-        <p class="entry-date">{{ page.date|date:"%Y-%m-%d" }}</p>
-        {{ content }}
-
-        <div id="disqus_container">
-            <div style="margin-bottom:20px" class="right">
+	    <div id="disqus_container">
+            <div style="margin-top:4px" class="right">
                 <script type="text/javascript" charset="utf-8">
                 (function(){
                   var _w = 86 , _h = 16;
@@ -43,34 +30,12 @@ layout: default
                 })()
                 </script>
             </div>
-            <!-- <a href="#" class="comment" onclick="return false;">点击查看评论</a>
-            <div id="disqus_thread"></div> -->
-        </div>
+	    </div>
     </div>
 
-
-    <div class="sidenav">
-        <h2>Blog</h2>
-        <ul class="artical-list">
-        {% for post in site.categories.blog%}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-        </ul>
-
-        <h2>Opinion</h2>
-        <ul class="artical-list">
-        {% for post in site.categories.opinion%}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-        </ul>
-
-        <h2>Project</h2>
-        <ul class="artical-list">
-        {% for post in site.categories.project%}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-        </ul>
+    <div class="time">{{ page.date|date:"%Y-%m-%d" }}</div>
+    <div class="content">
+        {{ content }}
     </div>
+
 </div>
-
-<script src="/js/post.js" type="text/javascript"></script>
