--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
         <script src="../js/css3-mediaqueries.js"></script>
         <script src="../js/html5.js"></script>
+        <link type="text/css" rel="stylesheet" href="../css/compile/pc.css" />
     <![endif]-->
     <link type="text/css" media="screen and (max-width:767px)" rel="stylesheet" href="../css/compile/mobile.css" />
     <link type="text/css" media="screen and (min-width:768px)" rel="stylesheet" href="../css/compile/pc.css" />
@@ -28,9 +29,9 @@
         <header>
             <div class="inner">
                 <div class="logo">
-                    <div class="welcome">welcome to zEx'blog</div>
-                    <div class="photo">
-                        <img src="/images/zex.jpeg" alt="zex'photo" />
+                    <div class="welcome">Welcome to zEx'blog</div>
+                    <div class="userpic">
+                        <div class="shine"></div>
                     </div>
                 </div>
                 <nav>
