--- a/css/uncompile/mobile.scss
+++ b/css/uncompile/mobile.scss
@@ -14,21 +14,8 @@ $global_FontSubColor:#999;
 	}
 	.logo{
 		text-align: center;
-		.welcome{ font-size: 16px; height:20px; line-height: 20px; overflow: hidden;}
-		.photo{
-			width: 50px;
-			height: 50px;
-			border: 2px solid #FFFFFF;
-			@include bor_ra(25px);
-			-webkit-box-shadow: 0 2px 2px rgba(0,0,0,.2);
-			box-shadow: 0 2px 2px rgba(0,0,0,.2);
-			margin: 5px auto 10px;
-			img{
-				width: 50px;
-				height: 50px;
-				@include bor_ra(25px);
-			}
-		}
+		.welcome{ font-size: 16px;}
+		.userpic{ background: url(../../images/zex.jpeg) no-repeat; width: 50px; height: 50px; border-radius: 50%; border:2px solid #FFFFFF; box-shadow: 1px 1px 1px rgba(0,0,0,.2); background-size: 50px 50px; margin: 0 auto 10px;}
 	}
 	nav{
 		@include father;
