发布翻译的第一篇文章

--- a/css/uncompile/mobile.scss
+++ b/css/uncompile/mobile.scss
@@ -6,6 +6,7 @@ $global_FontSubColor:#999;
 // variable END
 @import "/Users/sunrise/Sites/global/css/_m_reset";
 @import "/Users/sunrise/Sites/global/css/_public";
+@import "_comm";
 
 .wrapper{
 	width: 100%;
