--- a/css/uncompile/pc.scss
+++ b/css/uncompile/pc.scss
@@ -10,7 +10,7 @@ $mainColor:#edae21;
 @import "/Users/sunrise/Sites/global/css/_reset";
 @import "/Users/sunrise/Sites/global/css/_animation";
 @import "/Users/sunrise/Sites/global/css/_public";
-
+@import "_comm";
 
 // css3动画
 @-webkit-keyframes welcome{
