--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
     <link type="text/css" media="screen and (min-width:768px)" rel="stylesheet" href="../css/compile/pc.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <script src="../js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <link rel="Stylesheet" type="text/css" href="../js/prettify/prettify.css" />
+<script type="text/javascript"  src="../js/prettify/prettify.js"></script>
 </head>
 <body>
     <!--[if IE]>
@@ -50,7 +52,9 @@
 
 
     <script type="text/javascript">
-        $(function(){
+        $(window).load(function () {
+            $("pre").addClass("prettyprint linenums");
+            prettyPrint();
             if($(".js_cate").attr("name") || $(".page-content").attr("name")){
                 if($(".js_cate").attr("name") == "blog" || $(".page-content").attr("name") == "blog"){
                     $("nav a").eq(0).addClass("on");
@@ -62,7 +66,7 @@
                     $("nav a").eq(2).addClass("on");
                 }
             }
-        })()
+        })
     </script>
 
 
