--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,17 @@
 <script type="text/javascript"  src="../js/prettify/prettify.js"></script>
 </head>
 <body>
+     <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'zex'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
     <!--[if IE]>
     <div class="hackIE">
         zEx的博客不支持 IE 浏览器哦，请使用「Chrome」或者「Firefox」浏览器。
