代码高亮优化

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
 <script type="text/javascript"  src="../js/prettify/prettify.js"></script>
 </head>
 <body>
+    <!-- 评论代码 start -->
      <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'zex'; // required: replace example with your forum shortname
@@ -31,6 +32,7 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
+    <!-- 评论代码 end -->
     <!--[if IE]>
     <div class="hackIE">
         zEx的博客不支持 IE 浏览器哦，请使用「Chrome」或者「Firefox」浏览器。
