--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <![endif]-->
     <link type="text/css" media="screen and (max-width:767px)" rel="stylesheet" href="../css/compile/mobile.css" />
     <link type="text/css" media="screen and (min-width:768px)" rel="stylesheet" href="../css/compile/pc.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <script src="../js/jquery-1.7.1.min.js" type="text/javascript"></script>
     <link rel="Stylesheet" type="text/css" href="../js/prettify/prettify.css" />
 <script type="text/javascript"  src="../js/prettify/prettify.js"></script>
