--- a/PPT/css/reveal.css
+++ b/PPT/css/reveal.css
@@ -337,7 +337,7 @@ body {
 	padding: 5px;
 	overflow: auto;
 	max-height: 400px;
-	word-wrap: normal;
+	/*word-wrap: normal;*/
 }
 .reveal pre.stretch code {
 	height: 100%;
