--- a/website/pzw/scss/login.scss
+++ b/website/pzw/scss/login.scss
@@ -1,6 +1,14 @@
 @charset "utf-8";
 @import "_mixin";
 
+.lp{
+	float: left;
+}
+
+.rp{
+	float: right;
+}
+
 .bg-box{
 	position: absolute;
 	top: 0;
@@ -168,6 +176,13 @@
 	height: 36px;
 }
 
+.ico-ok-green{
+	background-image: url(../images/login/ok-green.png);
+	width: 24px;
+	height: 24px;
+	margin-left: 15px;
+}
+
 .ico-suc{
 	background-image: url(../images/ok-g.png);
 	width: 63px;
@@ -198,7 +213,7 @@
 	@include m-bor();
 	width: 1000px;
 	margin: 0 auto;
-	padding: 25px 0 40px;
+	padding: 25px 0 90px;
 	.con-box{
 		text-align: center;
 		table{
@@ -250,6 +265,7 @@
 			line-height: 21px;
 			color: #999;
 			margin-top: 5px;
+			color: #aaaaaa;
 		}
 		.suc-box{
 			padding: 30px 0 0;
@@ -334,7 +350,82 @@
 
 
 
-
+// reg
+.reg-page-box{
+	@extend .get-pw-panel;
+	margin-top: 25px;
+	.hd{
+		font-size: 0;
+		height: 75px;
+		border-bottom: 1px solid #f5f5f5;
+	}
+	.tab{
+		li{
+			@extend .dis_ib;
+			padding: 0 30px;
+			margin-left: 35px;
+			font-size: 20px;
+			height: 74px;
+			line-height: 74px;
+			a{
+				display: block;
+				color: #999999;
+			}
+			&.cur{
+				border-bottom: 3px solid $lc;
+				a{
+					color: #555555;
+				}
+			}
+		}
+	}
+	.bd{
+		margin-top: 60px;
+		position: relative;
+		label{
+			color: #aaaaaa;
+			a{
+				color: $lc;
+			}
+		}
+	}
+	.reg-page-login{
+		position: absolute;
+		top: 0;
+		right: 30px;
+		width: 280px;
+		height: 400px;
+		background: #f5f5f5;
+		text-align: center;
+		color: #aaa;
+		@include m-bor();
+		@extend .other-panel;
+		strong{
+			padding-bottom: 35px;
+			display: block;
+		}
+	}
+	.con-box{
+		.submit-btn{
+			margin: 35px 0 0 120px;
+			background-color: $lc;
+		}
+	}
+	.send-msm{
+		width: 114px;
+		height: 48px;
+		border: 1px solid $bc;
+		background: #f4f4f4 url(../images/send-msm.png) repeat-x;
+		color: #555;
+		font-size: 14px;
+		cursor: pointer;
+	}
+	.err{
+		color: #d52b2a;
+		font-size: 14px;
+		margin-top: 5px;
+	}
+}
 
 
 
