--- a/website/pzw/scss/_ico.scss
+++ b/website/pzw/scss/_ico.scss
@@ -48,7 +48,42 @@
 	margin-left: 10px;
 }
 
+.ico-upload-pic{
+	background-image: url(../images/upload-pic.png);
+	width: 20px;
+	height: 17px;
+}
 
+.ico-xhb{
+	background-image: url(../images/xhb.png);
+	width: 30px;
+	height: 30px;
+	margin-right: 20px;
+}
+.ico-talk-green{
+	background-image: url(../images/talk-green.png);
+	width: 30px;
+	height: 30px;
+}
+
+.ico-page-left{
+	background-image: url(../images/page-left.png);
+}
+.ico-page-right{
+	background-image: url(../images/page-right.png);
+}
+.ico-ly2{
+	background-image: url(../images/ly2.png);
+	width: 20px;
+	height: 17px;
+}
+
+.ico-th{
+	background-image: url(../images/th.png);
+	width: 32px;
+	height: 32px;
+	margin-right: 20px;
+}
 
 
 
