--- a/website/pzw/scss/global.scss
+++ b/website/pzw/scss/global.scss
@@ -32,10 +32,6 @@ a {
   color: #172c45;
   text-decoration: none;
 }
-a:hover {
-  color: #cd0200;
-  text-decoration: underline;
-}
 em {
   font-style: normal;
 }
@@ -88,6 +84,7 @@ h2 {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 5;
 }
 .pzTopPn .pzTopBg {
   position: absolute;
@@ -131,8 +128,8 @@ h2 {
 }
 .pzTopPn .pzTopInner .search .searchInner .down {
   float: left;
-  width: 65px;
-  padding: 0 10px;
+  width: 100px;
+  padding: 0 0 0 10px;
   color: #a9aaae;
   cursor: pointer;
 }
@@ -152,15 +149,13 @@ h2 {
   line-height: 35px;
   outline: none;
   color: #a9aaae;
-  width: 246px;
+  width: 220px;
 }
 .pzTopPn .pzTopInner .search .searchInner .btn {
   float: right;
   width: 37px;
   height: 35px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  background-color: #313234;
+  border-radius: 0 5px 5px 0;
   border-left: 1px solid #383c3f;
   background-image: url(../images/search.png);
 }
@@ -169,7 +164,6 @@ h2 {
   z-index: 99;
   top: 35px;
   left: 0px;
-  width: 80px;
   background-color: #23262b;
 }
 .pzTopPn .pzTopInner .search .searchInner .downList li {
@@ -225,7 +219,7 @@ h2 {
   width: 20%;
   height: 50px;
 }
-.pzNavPn .pzNavInner li a {
+.pzNavPn .pzNavInner li .navLink {
   display: block;
   color: #fff;
   font-size: 16px;
@@ -233,7 +227,7 @@ h2 {
   text-align: center;
   text-decoration: none;
 }
-.pzNavPn .pzNavInner li a:hover {
+.pzNavPn .pzNavInner li .navLink:hover {
   text-decoration: none;
 }
 .pzNavPn .pzNavInner li dl {
@@ -293,6 +287,9 @@ h2 {
   padding-top: 40px;
   margin-bottom: 5px;
 }
+.pzNavPn .pzNavInner .hover .threeTag {
+  display: none;
+}
 .pzNavPn .pzNavInner .hover .show {
   background: rgba(65, 67, 72, 0.9);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr='#E5414348', endColorstr='#E5414348');
@@ -310,13 +307,28 @@ h2 {
   *height: 137px;
 }
 .pzNavPn .pzNavInner .hover .show .threeTag {
+  display: block;
   position: absolute;
-  right: -200px;
+  right: -270px;
   top: 0;
-  background: rgba(255, 255, 255, 0.9);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr='#E5ffffff', endColorstr='#E5ffffff');
-  width: 200px;
-  height: 550px;
+  background: rgba(243, 243, 243, 0.95);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled='true', startColorstr='#E5f3f3f3', endColorstr='#E5f3f3f3');
+  width: 270px;
+  padding: 40px 0;
+}
+.pzNavPn .pzNavInner .hover .show .threeTag a {
+  float: left;
+  color: #999;
+  width: 135px;
+  margin-bottom: 20px;
+}
+.pzNavPn .pzNavInner .hover .show .threeTag a .icnDot {
+  display: inline-block;
+  vertical-align: text-top;
+  width: 6px;
+  height: 5px;
+  margin: 10px 10px 0 20px;
+  background: url(../images/dot.jpg);
 }
 .pzPartnerPn {
   background-color: #f3f3f3;
