--- a/website/pzw/scss/login.scss
+++ b/website/pzw/scss/login.scss
@@ -1,13 +1,6 @@
 @charset "utf-8";
 @import "_mixin";
-
-.lp{
-	float: left;
-}
-
-.rp{
-	float: right;
-}
+@import "_public";
 
 .bg-box{
 	position: absolute;
@@ -189,6 +182,24 @@
 	height: 65px;
 }
 
+.ico-ly2{
+	background-image: url(../images/ly2.png);
+	width: 20px;
+	height: 17px;
+}
+
+.ico-data{
+	background-image: url(../images/data.png);
+	width: 20px;
+	height: 17px;
+}
+
+.ico-upload-pic{
+	background-image: url(../images/upload-pic.png);
+	width: 20px;
+	height: 17px;
+}
+
 .ok{
 	.ico-c{
 		background-image: url(../images/login/c2.png);
@@ -218,25 +229,65 @@
 		text-align: center;
 		table{
 			width: 100%;
+			margin-bottom: 35px;
 		}
 		td{
 			padding: 10px;
 			vertical-align: top;
 			.t{
-				padding-top: 12px;
+				padding-top: 14px;
+			}
+			.select-panel{
+				height: 48px;
+				table{
+					width: auto;
+				}
+				table,td{
+					height: 100%;
+					vertical-align: middle;
+				}
 			}
 		}
-		input.txt,input.txt-s,.selector{
+		input.txt,input.txt-s,.selector,.txt-div,.txt-div-s{
 			width: 350px;
 			height: 48px;
 			line-height: 48px;
 			font-size: 14px;
 			border: 1px solid #e8e8e8;
 			vertical-align: middle;
+			@extend .dis_ib;
 		}
-		input.txt-s{
+		input.txt-s,.txt-div-s{
 			width: 220px;
 			margin-right: 10px;
+		}
+		.txt-div,.txt-div-s{
+			font-size: 0;
+			.txt-span{
+				height: 48px;
+				font-size: 14px;
+				width: 310px;
+				padding-left: 10px;
+				overflow: hidden;
+				@extend .dis_ib;
+				vertical-align: middle;
+				border: none;
+				font-size: 14px;
+			}
+		}
+		.txt-div-s{
+			width: 165px;
+			@extend .dis_ib;
+			.txt-span,.unit-span{
+				width: 100px;
+			}
+			.unit-span{
+				width: auto;
+				color: #aaaaaa;
+				margin: 0;
+				font-size: 14px;
+				vertical-align: middle;
+			}
 		}
 		.submit-btn{
 			width: 356px;
@@ -388,6 +439,19 @@
 				color: $lc;
 			}
 		}
+		.title{
+			display: block;
+			margin-bottom: 15px;
+			color: #cacaca;
+			font-size: 16px;
+			text-align: left;
+			padding-left:30px;
+			.sub-t{
+				padding-left: 15px;
+				font-size: 12px;
+				font-weight: normal;
+			}
+		}
 	}
 	.reg-page-login{
 		position: absolute;
@@ -407,8 +471,28 @@
 	}
 	.con-box{
 		.submit-btn{
-			margin: 35px 0 0 120px;
+			margin: 0 0 0 120px;
 			background-color: $lc;
+		}
+		.career{
+			font-size: 0;
+			li{
+				@extend .dis_ib;
+				font-size: 14px;
+				width: 105px;
+				height: 48px;
+				line-height: 48px;
+				text-align: center;
+				border: 1px solid #e8e8e8;
+				background-color: #f3f3f3;
+				cursor: pointer;
+				@include m-bor($m-bor: 3px);
+				margin-right: 17px;
+				&.cur{
+					color: $lc;
+					border-color: #3399cc;
+				}
+			}
 		}
 	}
 	.send-msm{
@@ -419,13 +503,59 @@
 		color: #555;
 		font-size: 14px;
 		cursor: pointer;
+		vertical-align: middle;
 	}
 	.err{
 		color: #d52b2a;
 		font-size: 14px;
 		margin-top: 5px;
 	}
+	.reg-suc-box{
+		border-bottom: 1px solid $bc;
+		margin: 0 20px -25px;;
+		color: #999;
+		text-align: center;
+		padding: 15px 0 30px;
+		.hd-panel{
+			font-size: 18px;
+			color: $lc;
+			line-height: 40px;
+		}
+	}
 }
+
+.upload-box{
+	.upload-pic-b{
+		width: 138px;
+		height: 138px;
+		border: 1px solid #e8e8e8;
+		background: url(../images/no-sprite/upload-b.png) no-repeat;
+		overflow: hidden;
+		@extend .dis_ib;
+		.upload{
+			width: 100%;
+			height: 100%;
+			opacity: 0;
+			filter: alpha(opacity = 0);
+		}
+	}
+	.yq{
+		@extend .dis_ib;
+		position: relative;
+		white-space: nowrap;
+		.inner{
+			position: absolute;
+			bottom: 0;
+			left: 10px;
+			color: #aaa;
+			font-size: 12px;
+			line-height: 25px;
+		}
+	}
+}
+
+
+
 
 
 
