--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,9 @@
     <![endif]-->
     <link type="text/css" media="screen and (max-width:767px)" rel="stylesheet" href="../css/compile/mobile.css" />
     <link type="text/css" media="screen and (min-width:768px)" rel="stylesheet" href="../css/compile/pc.css" />
+    <link type="text/css" media="screen" rel="stylesheet" href="../css/compile/jpage.css" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <script src="../js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../js/jquery-1.11.1.js" type="text/javascript"></script>
     <link rel="Stylesheet" type="text/css" href="../js/prettify/prettify.css" />
 <script type="text/javascript"  src="../js/prettify/prettify.js"></script>
 </head>
