--- a/css/uncompile/_comm.scss
+++ b/css/uncompile/_comm.scss
@@ -88,4 +88,14 @@
 
 .table th{ text-align: center;}
 
+.code-red{
+	padding: 2px 4px;
+	color: #d14;
+	background-color: #f7f7f9;
+	border: 1px solid #e1e1e8;
+	white-space: nowrap;
+	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
+	border-radius: 3px;
+}
+
 
