--- a/website/sg-h5-swiper/scss/sg-2014.scss
+++ b/website/sg-h5-swiper/scss/sg-2014.scss
@@ -21,10 +21,11 @@ html,body,.swiper-container{width:100%;height:100%; overflow: hidden}
 	background-color: #f7644c;
 	position: relative;
 	color: #fff;
+	.holder-box{
+		height: 35%;
+		width: 100%;
+	}
 	.loading{
-		.wrap{
-			padding-top: 40%;
-		}
 		.inner{
 			margin: 0 auto;
 			width: 90px;
