--- a/website/epubit/static/scss/style.scss
+++ b/website/epubit/static/scss/style.scss
@@ -844,3 +844,92 @@ footer{
 		}
 	}
 }
+
+.sidebar-box{
+	position: relative;
+	a{
+		color: $global-FontMainColor;
+		&:hover{
+			text-decoration: none;
+		}
+	}
+	.hd{
+		border-bottom: 1px solid $borColor2;
+		font-size: 14px;
+		color: #999;
+		padding: 10px 0 8px 30px;
+		.glyphicon{
+			color: $green;
+			margin-right: 5px;
+		}
+	}
+	.main-cate{
+		margin-bottom: -1px;
+		li{
+			height: 50px;
+			line-height: 50px;
+			font-size: 14px;
+			color: $global-FontMainColor;
+			border-bottom: 1px solid $borColor3;
+			margin: 0 30px;
+			cursor: pointer;
+		}
+		a{
+			display: block;
+		}
+		.txt{
+			float: left;
+		}
+		.glyphicon{
+			float: right;
+			line-height: 50px;
+			color: $global-FontMainColor
+		}
+	}
+	.dropdown-menu{
+		position: absolute;
+		left: 100%;
+		top: -3px;
+		background-color: #fff;
+		z-index: 10;
+		border: 1px solid #dedede;
+		border-top: none;
+		width: 630px;
+		float: none;
+		border-radius: 0;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		padding: 30px 0;
+		margin: 0;
+		line-height: 30px;
+		a{
+			white-space: nowrap;
+		}
+	}
+	.sidebar{
+		.media{
+			padding: 5px 0;
+			border-bottom: 1px solid #f2f2f2;
+			margin: 0 40px;
+		}
+		.media-left{
+			padding-right: 20px;
+			.glyphicon{
+				float: none;
+				line-height: normal;
+				color: #999;
+				top: 2px;
+			}
+			a{
+				display: inline-block;
+			}
+		}
+		.media-body{
+			a{
+				display: inline;
+				padding: 0 15px;
+				border-left: 1px solid $borColor2
+			}
+		}
+	}
+}
